Chore: Almaraz 0.4.0 - Java 21 Update